# urlencoded

./: Cargo.toml
examples/: get_request.rs  post_request.rs
src/: lib.rs
