[package]
authors = [
    "Patrick Tran <patrick.tran06@gmail.com>",
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Michael Sproul <micsproul@gmail.com>",
]
description = "Decoding middleware for url-encoded data. For use with Iron."
documentation = "http://ironframework.io/doc/urlencoded/"
keywords = [
    "iron",
    "web",
    "url",
    "encoding",
]
license = "MIT"
name = "urlencoded"
readme = "README.md"
repository = "https://github.com/iron/urlencoded"
version = "0.5.0"

[dependencies]
bodyparser = "0.8.0"
iron = "0.6.0"
plugin = "0.2.6"
url = "1.6.0"
